Bug 1220621.  When removing a <col>, only create an anonymous colframe to replace it if one is really needed.  r=dbaron